the_week_of_11_18_25/9-targetgroup.tf
resource "aws_lb_target_group" "fortressmaximus-tg" {
  name     = "fortressmaximus-tg"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.fortressmaximus-vpc.id
  target_type = "instance"

  health_check {
    enabled             = true
    interval            = 30
    path                = "/"
    protocol            = "HTTP"
    healthy_threshold   = 5
    unhealthy_threshold = 2
    timeout             = 5
    matcher             = "200"
  }

  tags = {
    Name    = "fortressmaximus-targetgroup"
    Service = "vpc"
    Owner   = "Optimus Prime"
    Planet  = "Cybertron"
  }
}
